@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 
+- added: featured group widget
 - added: a index widget (for Widget Manager) to show the latest discussions
 - fixed: outstanding invitations and membership request not always cleaned up
 - fixed: incorrect widget title for group members
